<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FiltrosDevolcionesActivity">

    <Button
        android:id="@+id/_filtos_btn_porFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/_filtros_string_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/_filtros_btn_Nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_filtros_string_cliente_nombre"
        app:layout_constraintEnd_toEndOf="@+id/_filtos_btn_porFecha"
        app:layout_constraintStart_toStartOf="@+id/_filtos_btn_porFecha"
        app:layout_constraintTop_toBottomOf="@+id/_filtos_btn_porFecha" />

    <Button
        android:id="@+id/_filtos_btn_Migrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_filtros_string_migrado"
        app:layout_constraintEnd_toEndOf="@+id/_filtros_btn_Nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/_filtros_btn_Nombre"
        app:layout_constraintTop_toBottomOf="@+id/_filtros_btn_Nombre" />

    <Button
        android:id="@+id/_filtos_btn_sin_migrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/_filtros_string_sin_migrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/_filtos_btn_Migrado"
        app:layout_constraintTop_toBottomOf="@+id/_filtos_btn_Migrado" />
</androidx.constraintlayout.widget.ConstraintLayout>